turning some classes to fnctions

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hp/dynamic_form",
     "autoload": {
         "psr-4": {
-            "Hp\\DynamicForm\\": "src/"
+            "Core\\": "./Core"
         }
     },
     "authors": [
